Fix icon alignment

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -17,3 +17,7 @@ p, a, span, label {
 a:hover {
   color: $link-color;
 }
+
+.anticon {
+  vertical-align: 0 !important
+}
